--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "displayName": "KDE Plasma Breeze",
   "description": "Theme matching KDE Plasma Breeze",
   "version": "1.0.0",
+	"icon": "icon-kde-plasma-breeze.png",
+	"galleryBanner": {
+		"color": "#3DAEE9",
+		"theme": "light"
+	},
   "engines": {
     "vscode": "^1.103.0"
   },
